--- a/christmas-tree-pad.html
+++ b/christmas-tree-pad.html
@@ -135,7 +135,7 @@
             ctx.fillStyle = 'white';
             ctx.font = 'bold 55px sans-serif';
             ctx.textAlign = 'center';
-            ctx.fillText('黄海玲圣诞节快乐', 300, 80);
+            ctx.fillText('海玲宝宝圣诞节快乐', 300, 80);
             const data = ctx.getImageData(0, 0, 600, 150).data;
             for(let y=0; y<150; y+=3) {
                 for(let x=0; x<600; x+=3) {
@@ -298,3 +298,4 @@
     </script>
 </body>
 </html>
+
